ops/k8s/overlays/production/patch-resources.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: keycloak
  namespace: keycloak
spec:
  # Run with one replica to save resources, or with two replicas to allow for rolling updates for configuration changes
  replicas: 1
  template:
    spec:
      containers:
        - name: keycloak
          resources:
            limits:
              cpu: 2000m
              memory: 2000Mi
            requests:
              cpu: 500m
              memory: 1700Mi
          startupProbe:
            httpGet:
              scheme: HTTPS
          readinessProbe:
            httpGet:
              scheme: HTTPS
          livenessProbe:
            httpGet:
              scheme: HTTPS
